--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "font-awesome": "~4.2.0",
     "angular-ui-router": "~0.2.13",
     "angular-route": "~1.3.14",
-    "angular-bootstrap": "~0.12.1"
+    "angular-bootstrap": "~0.12.1",
+    "ng-parallax": "~0.1.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
