--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-ui-router": "~0.2.13",
     "angular-route": "~1.3.14",
     "angular-bootstrap": "~0.12.1",
-    "ng-parallax": "~0.1.8"
+    "ng-parallax": "~0.1.8",
+    "sinon": "~1.14.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
