--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.5",
+    "karma-jasmine-html-reporter": "^0.1.6",
     "karma-mocha": "^0.1.10",
     "karma-ng-html2js-preprocessor": "^0.1.2",
     "karma-phantomjs-launcher": "^0.1.4",
+    "karma-spec-reporter": "0.0.16",
     "mocha": "^2.1.0",
     "tiny-lr": "^0.1.5"
   }
